--- a/imgui.ini
+++ b/imgui.ini
@@ -90,6 +90,11 @@ Pos=16,80
 Size=283,187
 Collapsed=0
 
+[Window][PostEffect]
+Pos=60,60
+Size=364,153
+Collapsed=0
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
