--- a/NewEngine.vcxproj.filters
+++ b/NewEngine.vcxproj.filters
@@ -139,6 +139,9 @@
     <Filter Include="Shader\Application\Bloom">
       <UniqueIdentifier>{7062c03f-aed0-498f-9f48-67d18ffe2c05}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shader\Application\Glare">
+      <UniqueIdentifier>{4166cf33-29d2-4eb6-9be3-a430bda43dc5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp">
@@ -337,6 +340,9 @@
       <Filter>Application\Source\PostEffect</Filter>
     </ClCompile>
     <ClCompile Include="Application\SourceCode\GaussainBlur.cpp">
+      <Filter>Application\Source\PostEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Glare.cpp">
       <Filter>Application\Source\PostEffect</Filter>
     </ClCompile>
   </ItemGroup>
@@ -572,6 +578,9 @@
     <ClInclude Include="Application\SourceCode\GaussainBlur.h">
       <Filter>Application\Header\PostEffect</Filter>
     </ClInclude>
+    <ClInclude Include="Application\SourceCode\Glare.h">
+      <Filter>Application\Header\PostEffect</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="NewEngine\Shader\Blur.hlsli">
@@ -616,14 +625,23 @@
     <None Include="Application\Shader\BGaussainBlur.hlsli">
       <Filter>Shader\Application\Bloom</Filter>
     </None>
-    <None Include="Application\Shader\BHighLumi.hlsli">
-      <Filter>Shader\Application\Bloom</Filter>
-    </None>
     <None Include="Application\Shader\Vignette.hlsli">
       <Filter>Shader\Application</Filter>
     </None>
     <None Include="Application\Shader\GaussainBlur.hlsli">
       <Filter>Shader\Application</Filter>
+    </None>
+    <None Include="Application\Shader\HighLumi.hlsli">
+      <Filter>Shader\Application</Filter>
+    </None>
+    <None Include="Application\Shader\GLineBlur.hlsli">
+      <Filter>Shader\Application\Glare</Filter>
+    </None>
+    <None Include="Application\Shader\Glare.hlsli">
+      <Filter>Shader\Application\Glare</Filter>
+    </None>
+    <None Include="Application\Shader\DotFilter.hlsli">
+      <Filter>Shader\Application\Glare</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -693,12 +711,6 @@
     <FxCompile Include="Application\Shader\BGaussainBlurVS.hlsl">
       <Filter>Shader\Application\Bloom</Filter>
     </FxCompile>
-    <FxCompile Include="Application\Shader\BHighLumiPS.hlsl">
-      <Filter>Shader\Application\Bloom</Filter>
-    </FxCompile>
-    <FxCompile Include="Application\Shader\BHighLumiVS.hlsl">
-      <Filter>Shader\Application\Bloom</Filter>
-    </FxCompile>
     <FxCompile Include="Application\Shader\VignettePS.hlsl">
       <Filter>Shader\Application</Filter>
     </FxCompile>
@@ -710,6 +722,30 @@
     </FxCompile>
     <FxCompile Include="Application\Shader\GaussainBlurVS.hlsl">
       <Filter>Shader\Application</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\HighLumiPS.hlsl">
+      <Filter>Shader\Application</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\HighLumiVS.hlsl">
+      <Filter>Shader\Application</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\GLineBlurPS.hlsl">
+      <Filter>Shader\Application\Glare</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\GLineBlurVS.hlsl">
+      <Filter>Shader\Application\Glare</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\GlarePS.hlsl">
+      <Filter>Shader\Application\Glare</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\GlareVS.hlsl">
+      <Filter>Shader\Application\Glare</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\DotFilterPS.hlsl">
+      <Filter>Shader\Application\Glare</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\DotFilterVS.hlsl">
+      <Filter>Shader\Application\Glare</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
