--- a/imgui.ini
+++ b/imgui.ini
@@ -91,8 +91,13 @@ Size=283,187
 Collapsed=0
 
 [Window][PostEffect]
-Pos=128,111
+Pos=115,106
 Size=364,153
+Collapsed=0
+
+[Window][Parameter]
+Pos=759,338
+Size=405,77
 Collapsed=0
 
 [Docking][Data]
