Gui上でパラメーター変更できるように

--- a/imgui.ini
+++ b/imgui.ini
@@ -91,14 +91,16 @@ Size=283,187
 Collapsed=0
 
 [Window][PostEffect]
-Pos=115,106
-Size=364,153
+Pos=143,84
+Size=356,152
 Collapsed=0
+DockId=0x0000000C,0
 
 [Window][Parameter]
-Pos=759,338
-Size=405,77
+Pos=501,84
+Size=353,152
 Collapsed=0
+DockId=0x0000000D,0
 
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
@@ -110,5 +112,8 @@ DockNode    ID=0x00000004 Pos=129,658 Size=358,407 Split=Y
 DockNode    ID=0x00000005 Pos=1405,5 Size=432,360 Split=Y Selected=0xC08551AB
   DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=432,180 Selected=0xC08551AB
   DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=432,178 Selected=0x139FF6FE
+DockNode    ID=0x0000000A Pos=143,84 Size=711,152 Split=X Selected=0x73CB1CFE
+  DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=182,153 Selected=0x704CD24F
+  DockNode  ID=0x0000000D Parent=0x0000000A SizeRef=180,153 Selected=0x73CB1CFE
 DockNode    ID=0x0000000B Pos=1417,455 Size=419,438 Selected=0x7FDF5256
 
